@@ -59,6 +59,9 @@ created                        "erzeugt am"
 createfolderbutton             "Ordner anlegen"
 createfoldertext               "Ordnername: "
 createnewfilebutton            "Datei anlegen"
+createsymlinkbutton            "Link anlegen"
+createsymlinkdescr             "Symbolischen Link zur ausgewählten Datei oder zum gewählten Ordner anlegen."
+createsymlinktext              "Symbolischer Link-Name: "
 cut                            "Ausschneiden"
 cuttooltip                     "Dateien/Ordner zum Verschieben in die Zwischenablage ablegen"
 deletefileconfirm              "Wollen Sie wirklich "%s" löschen?"
@@ -112,6 +115,9 @@ msg_chpermnothingerr           "Sie haben keine Dateien/Ordner ausgewählt, für
 msg_copyfailed                 "Dateien/Ordner %s nicht kopiert."
 msg_copysuccess                "Dateien/Ordner %s kopiert."
 msg_createnewfileerr           "Konnte die Datei '%s' nicht anlegen (%s)."
+msg_createsymlinkerr           "Konnte den symbolischen Link %s zu %s nicht anlegen: %s."
+msg_createsymlinknolinknameerr "Bitten geben Sie einen Linknamen ein."
+msg_createsymlinknoneselerr    "Bitte wählen Sie eine Datei oder einen Ordner aus, der verlinkt werden soll."
 msg_cutfailed                  "Dateien/Ordner %s nicht verschoben."
 msg_cutsuccess                 "Datei(en)/Ordner %s verschoben."
 msg_deletedmulti               "%s Dateien/Ordner gelöscht."
@@ -128,6 +134,7 @@ msg_renameerr                  "Konnte die gewählten Dateien/Ordner "%s" nicht 
 msg_renamenotargeterr          "Bitte geben Sie einen Ziel-Order/-Dateinamen an:"
 msg_renamenothingerr           "Bitte wählen Sie Dateien/Ordner aus, die ubenannt bzw. verschoben werden sollen."
 msg_savetexterr                "Sorry, konnte die Datei %s nicht speichern (falsche Rechte?)."
+msg_symlinkcreated             "Symbolischen Link %s auf %s angelegt."
 msg_textsaved                  "Datei %s gespeichert."
 msg_uploadforbidden            "Sorry, die Datei(en) "%s" kann/können nicht hochgeladen werden (fehlende Rechte?)"
 msg_uploadmulti                "%s Dateien (%s) wurden erfolgreich hochgeladen."
